--- a/FilipeSiemens/.classpath
+++ b/FilipeSiemens/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/gson_lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/gson"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/sunshine/Downloads/gson-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
