--- a/Android Application/app/src/main/AndroidManifest.xml
+++ b/Android Application/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.ReadC" />
 
     <application
         android:allowBackup="true"
@@ -15,27 +17,32 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>>
         <activity
             android:name=".AlarmActivity"
-            android:label="@string/title_activity_alarm"></activity>
+            android:label="@string/title_activity_alarm" />
 
         <receiver android:name=".Alarm" />
 
-        <activity android:name=".IdLogIn" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".IdLogIn">
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
-
         <activity
             android:name=".ShowCalendarEvents"
             android:label="@string/title_activity_show_calendar_events" />
-        <activity android:name=".SettingAnAlarmFromCalendar"></activity>
+        <activity android:name=".SettingAnAlarmFromCalendar" />
+        <activity
+            android:name=".ContactList"
+            android:label="@string/title_activity_contact_list" />
+        <activity
+            android:name=".SettingContactColors"
+            android:label="@string/title_activity_setting_contact_colors"></activity>
     </application>
 
 </manifest>
