--- a/Android Application/app/src/main/AndroidManifest.xml
+++ b/Android Application/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.ReadC" />
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_SMS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,6 +43,15 @@
         <activity
             android:name=".SettingContactColors"
             android:label="@string/title_activity_setting_contact_colors"></activity>
+
+        <receiver android:name="HandlingThePhoneCall" android:enabled="true" >
+            <intent-filter>
+                <action android:name="com.example.power.ledcode.SOME_MESSAGE" />
+                <action android:name="android.intent.action.PHONE_STATE" />
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
