--- a/GasDetectorApp/app/src/main/AndroidManifest.xml
+++ b/GasDetectorApp/app/src/main/AndroidManifest.xml
@@ -16,23 +16,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".ConnectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
         <activity
             android:name=".PlottingGraphics"
-            android:label="@string/title_activity_plotting_graphics">
-
-        </activity>
+            android:label="@string/title_activity_plotting_graphics"></activity>
     </application>
 
 </manifest>
