first trial in html

--- a/GasDetectorApp/app/src/main/AndroidManifest.xml
+++ b/GasDetectorApp/app/src/main/AndroidManifest.xml
@@ -28,7 +28,11 @@
             android:label="@string/title_activity_main" />
         <activity
             android:name=".PlottingGraphics"
-            android:label="@string/title_activity_plotting_graphics"></activity>
+            android:label="@string/title_activity_plotting_graphics" />
+        <activity android:name=".htmlTest">
+
+
+        </activity>
     </application>
 
 </manifest>
