--- a/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/Info.plist
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCalendarUsageDescription</key>
+	<string>$(PRODUCT_NAME) calendar use</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Syncing with  your meetings</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
