--- a/SmartBadgesAppAndroid/app/src/main/AndroidManifest.xml
+++ b/SmartBadgesAppAndroid/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -49,10 +50,10 @@
         </receiver>
 
         <receiver android:name=".HandlingCalls" android:enabled="true" >
-        <intent-filter>
-        <action android:name="android.intent.action.PHONE_STATE" />
-        <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+            </intent-filter>
         </receiver>
 
         <service
