--- a/FacialRecognitionApp/app/build.gradle
+++ b/FacialRecognitionApp/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.affectiva.android:affdexsdk:3.2'
 }
 
 android.defaultConfig.vectorDrawables.useSupportLibrary = true
