--- a/FacialRecognitionApp/app/build.gradle
+++ b/FacialRecognitionApp/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.affectiva.android:affdexsdk:3.2'
+    implementation "com.android.support:support-emoji:28.0.0"
 }
 
 android.defaultConfig.vectorDrawables.useSupportLibrary = true
