--- a/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS.xcodeproj/xcshareddata/xcschemes/HandlingContactsCalls.xcscheme
+++ b/SmartBadgesAppIOS/SmartBadgeAppIOS/SmartBadgeAppIOS.xcodeproj/xcshareddata/xcschemes/HandlingContactsCalls.xcscheme
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1010"
-   version = "1.3">
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D22E6ED621BEC61000AFEAE9"
+               BuildableName = "HandlingContactsCalls.appex"
+               BlueprintName = "HandlingContactsCalls"
+               ReferencedContainer = "container:SmartBadgeAppIOS.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -32,9 +47,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D22E6E0D21A2D4E000AFEAE9"
-            BuildableName = "Smart Badges.app"
-            BlueprintName = "SmartBadgeAppIOS"
+            BlueprintIdentifier = "D22E6ED621BEC61000AFEAE9"
+            BuildableName = "HandlingContactsCalls.appex"
+            BlueprintName = "HandlingContactsCalls"
             ReferencedContainer = "container:SmartBadgeAppIOS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -43,16 +58,21 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.springboard"
+         RemotePath = "/Watch App">
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D22E6E0D21A2D4E000AFEAE9"
@@ -60,7 +80,7 @@
             BlueprintName = "SmartBadgeAppIOS"
             ReferencedContainer = "container:SmartBadgeAppIOS.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -69,7 +89,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
