commented project blutetooth badge

--- a/SmartBadgesAppAndroidBluetooth/app/src/main/AndroidManifest.xml
+++ b/SmartBadgesAppAndroidBluetooth/app/src/main/AndroidManifest.xml
@@ -39,10 +39,10 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".Alarm" />
+        <receiver android:name=".Handlers.Alarm" />
 
         <receiver
-            android:name=".HandlingSMS"
+            android:name=".Handlers.HandlingSMS"
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
             <intent-filter android:priority="1000">
@@ -50,7 +50,7 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".HandlingCalls" android:enabled="true" >
+        <receiver android:name=".Handlers.HandlingCalls" android:enabled="true" >
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
@@ -58,7 +58,7 @@
         </receiver>
 
         <service
-            android:name=".NotificationService"
+            android:name=".Handlers.NotificationService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
