--- a/SmartBadgesAppAndroidWifi/app/build.gradle
+++ b/SmartBadgesAppAndroidWifi/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.power.blingmeappWifi"
+        applicationId "com.example.power.blingmeappWifiV2"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
